deploy/CL-AUT-PROD/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "jobBaseName-ingress"
  namespace: manager
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: cl-aut-prod-external-lb
    alb.ingress.kubernetes.io/load-balancer-name: "cl-aut-prod-external-lb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:024915803121:certificate/9709f7ef-5fbe-4e6c-b512-08236dd054b5
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: jobBaseName-ingress
spec:
  rules:
    - host: api-manager.autentia.io
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            pathType: ImplementationSpecific
          - backend:
              service:
                name: "service-jobBaseName"
                port:
                  number: 80
            pathType: ImplementationSpecific
